MiniAPPGo_Project/kubernetes/yamls/services/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: terrakuber-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /terrakuberv1
          backend:
            serviceName: terrakubev1-service
            servicePort: 5678
        - path: /terrakuberv2
          backend:
            serviceName: terrakubev2-service
            servicePort: 5678
